--- a/index.html
+++ b/index.html
@@ -8,20 +8,27 @@
 
     </head>
 
-    <h1>Eyes</h1>
+    <div class="title">
+        <h1>Eyes</h1>
+
+    </div>
+
+   
     
     <body>
 
-        <nav>
-            <ul>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            </ul>
-        </nav>
 
         <div class="eyes">
             <div class="eye">
                 <div class="ball"></div>
+            </div>
+        </div>
+
+        <div class="eye-container">
+            <div class="eye-shape">
+                <div class="eye-ball"></div>
+
+
             </div>
         </div>
         <script src="./eyes.js"></script>
