--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@
     </head>
 
     <div class="title">
-        <h1>Eyes</h1>
+        <h1>Mr Eyes!</h1>
 
     </div>
 
-   
-    
-    <body>
+    <body class="main">
 
 
-        <div class="eyes">
-            <div class="eye">
-                <div class="ball"></div>
+        <div class="eyes-right">
+            <div class="eye-right">
+                <div class="ball-right"></div>
             </div>
         </div>
 
-        <div class="eye-container">
-            <div class="eye-shape">
-                <div class="eye-ball"></div>
-
-
+        <div class="eyes-left">
+            <div class="eye-left">
+                <div class="ball-left"></div>
             </div>
         </div>
+
+        <div class="cat">
+            <img src="images/cat4.png" alt="" width="1600px" height="1100px"> 
+         </div>
+
         <script src="./eyes.js"></script>
+        
     </body>
 </html>
